Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,5 +1,69 @@
-##Hello World！！！
+<!doctype html>
+<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
+<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-##热爱&谦虚&尊重&信任
+  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
+  <link rel="stylesheet" href="stylesheets/github-dark.css">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="javascripts/script.js"></script>
 
-##精彩无限，敬请期待
+  <title>Ihrteam.GitHub.io</title>
+  <meta name="description" content="i=love h=humble r=respect t=trust &lt;==&gt; team">
+
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+
+</head>
+
+<body>
+
+  <div class="wrapper">
+    <header>
+      <h1 class="title">Ihrteam.GitHub.io</h1>
+    </header>
+    <div id="container">
+      <p class="tagline">i=love h=humble r=respect t=trust &lt;==&gt; team</p>
+      <div id="main" role="main">
+        <div class="download-bar">
+        <div class="inner">
+          <a href="https://github.com/ihrteam" class="code">View Ihrteam.GitHub.io on GitHub</a>
+        </div>
+        <span class="blc"></span><span class="trc"></span>
+        </div>
+        <article class="markdown-body">
+          <h3>
+<a id="hello-world" class="anchor" href="#hello-world" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hello World!</h3>
+
+<p>Today is my date of birth, even if it's just a incubation project. No, is a Team.</p>
+
+<h3>
+<a id="love-the-world-humble--respect--trust" class="anchor" href="#love-the-world-humble--respect--trust" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong>L</strong>ove the world, <strong>H</strong>umble &amp; <strong>R</strong>espect &amp; <strong>T</strong>rust</h3>
+
+<h3>
+<a id="coming-is-coming" class="anchor" href="#coming-is-coming" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Coming is coming</h3>
+        </article>
+      </div>
+    </div>
+    <footer>
+      <div class="owner">
+
+      <p><a href="https://github.com/ihrteam" class="avatar"><img src="https://avatars1.githubusercontent.com/u/19181856?v=3&amp;s=60" width="48" height="48"></a>View <a href="https://github.com/ihrteam">ihrteam</a> on <a href="https://www.github.com">GitHub</a></p>
+
+      </div>
+      <div class="creds">
+        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+      </div>
+    </footer>
+  </div>
+  <div class="current-section">
+    <a href="#top">Scroll to top</a>
+    <a href="https://github.com/ihrteam/ihrteam.github.io/tarball/master" class="tar">tar</a><a href="https://github.com/ihrteam/ihrteam.github.io/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <p class="name"></p>
+  </div>
+
+  
+</body>
+</html>
