--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <h3>
 <a id="hello-world" class="anchor" href="#hello-world" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hello World!</h3>
 
-<p>Today is my date of birth, even if it's just a incubation project. No, is a Team.</p>
+<p>Today is my day, even if it's just a incubation project. No, it is a Team.</p>
 
 <h3>
 <a id="love-the-world-humble--respect--trust" class="anchor" href="#love-the-world-humble--respect--trust" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong>L</strong>ove the world, <strong>H</strong>umble &amp; <strong>R</strong>espect &amp; <strong>T</strong>rust</h3>
